add: 認証機能の実装
